I have fixed some resposivnes issues, and created some more in the way. Active nav button now does not float over or goes sideways too much on screen resizing. However, I do have some empty space to appear on the left on resizing down. I think it is related to the fact that the footer is not responsive just yet.  So, I'll start with it next. And also I still need to make the nav collapsable ( I have added the button only this session)

--- a/assets/sass/elements/article.scss
+++ b/assets/sass/elements/article.scss
@@ -1,8 +1,20 @@
-#high_contrast{
-    background-color: analogous_blue.$color_four;
-    height: 100vh;
-    padding-top:30px;
+#high_contrast {
+  background-color: analogous_blue.$color_four;
+  height: 90vh;
+  padding-top: 30px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
-#Degas{
-    width:100%;
+#Degas {
+  width: 100%;
+}
+
+
+
+
+ @media (max-width: 1320px) {
+   #sm {
+    max-width: inherit;
+   }
+ 
 }
